# cmake-series

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.json  pnpm-lock.yaml
cmake/: AddFmt.cmake  ClangFormat.cmake
include/: foo.h  operations.h
src/: foo.cpp  main.cpp  operations.cpp  run_app.cpp
src/math/: CMakeLists.txt  math.cmake  math.cpp
src/stats/: CMakeLists.txt  stats.cpp
test/: CMakeLists.txt  test_calc.cpp
