cmake_minimum_required(VERSION 3.5)
project(HelloApp VERSION 0.0.1 DESCRIPTION "The leading Hello World App" LANGUAGES CXX)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
enable_testing()
add_subdirectory(src)
add_subdirectory(test)
add_executable(HelloAppBinary main.cpp)
target_link_libraries(HelloAppBinary PRIVATE calculator)
target_compile_features(HelloAppBinary PRIVATE cxx_std_20)